# symdesign

./: .gitattributes  .gitignore  .gitmodules  404.html  ASU.py  Align.py  Alignexpand.py  AnalyzeMutatedSequences.py  AnalyzeOutput.py  Atom.py  BioPDBUtils.py  CITATION.cff  Chain.py  ClusterUtils.py  CmdUtils.py  CommandDistributer.py  Coords.py  Database.py  DesignDirectory.py  DesignMetrics.py  DockingTrajectory.py  Entity.py  ExpandASU.py  FragDock.py  GatherProfile.py  JobResources.py  LICENSE.md  ListOverlap.py  MapJobsToCommands.py  Model.py  Nanohedra.py  NanohedraWrap.py  Nanohedra_s.py  OrientOligomer.py  PDB.py  PathUtils.py  PlasmidBuilder.py  Pose.py  PoseDirectory.py  PoseProcessing.py  (+64 more)
dependencies/: CMakeLists.txt  bmdca.cpp  bmdca.h  freesasa-2.0.config  load_armadillo_to_numpy.cpp
dependencies/errat/: errat.cpp  errat_every_residue.cpp  errat_v3.cpp  errat_v3_TODD.cpp  errat_v3_ori.cpp  errat_v4.cpp
dependencies/ialign/: README
dependencies/ialign/example/: README  target.lst  test.lst
dependencies/orient/: orient_oligomer.f
dependencies/orient/symm_files/: D2  I  T_opposite_degen
dependencies/rosetta/: consensus.xml  design.xml  design_custom.xml  design_movie.xml  design_profile.xml  flags_debug  hbnet_design_profile.xml  hbnet_scout.xml  interface_design.xml  interface_metrics.xml  interface_metrics_DEV.xml  loop_model_ensemble.xml  loopmodel_multipose.xml  loopmodel_template.xml  make_sym.xml  metrics.xml  metrics_DEV.xml  metrics_bound.xml  metrics_entity.xml  metrics_entity_DEV.xml  metrics_unbound.xml  optimize_design.xml  optimize_designs.xml  ref2015_solvent.wts_patch  ref2015_sym.wts_patch  ref2015_sym_2.wts_patch  ref2015_sym_2min.wts_patch  ref2015_sym_3min.wts_patch  ref2015_sym_solvent.wts_patch  refine.xml  refine_oligomer.xml  rotamer_boltzmann_template.xml  scout.xml  structure_background.xml  symmetry.xml  xtal_rotamer_boltzmann.xml
dependencies/rosetta/interface_design/: combo_profile.xml  consensus_design.xml  consensus_relax.xml  design_profile.xml  design_profile_hbnet_weights.xml  favor_profile.xml  hbnet_design_profile.xml  hbnet_scout.xml  limit_profile.xml  no_profile.xml  structure_backgroun.xml  structure_background.xml
dependencies/rosetta/metrics_scripts/: metrics_asu.xml  metrics_interface_bound.xml  metrics_interface_bound_DEV.xml  metrics_interface_design.xml  metrics_interface_design_asu.xml  metrics_interface_design_sym_dof.xml  metrics_nanohedra.xml  metrics_oligomer.xml  metrics_oligomer_unused.xml  metrics_scout_unbound.xml
dependencies/rosetta/sdf/: C1.sym  C2.sym  C3.sym  C4.sym  C5.sym  C6.sym  D3.sym  I.sym  I2.sym  I23.sym  I25.sym  I3.sym  I32.sym  I35.sym  I5.sym  I52.sym  I53.sym  IC2C5.sym  IC3.sym  IC5.sym  O.sym  O2.sym  O3.sym  O4.sym  T.sym  T2.sym  T23.sym  T3.sym  T32.sym  T32_king2014.sym  T33.sym  TC2.sym  TC2C3.sym  TC3.sym  TC3C2.sym  TC3C3.sym  dummy.sym  extract_coords_from_symm.py  scout_symmdef_file.pl
dependencies/rosetta/testing/: all_nanohedra_filter_and_metric_analysis.xml  layer_design.xml  modular_design_test.xml  point_refine.xml  xtal_design.xml  xtal_design2.xml  xtal_design_1912_working_doc.xml  xtal_design_DesAroundShell1.xml  xtal_design_fsp.xml  xtal_design_noFSP.xml  xtal_design_short_working_file.xml  xtal_design_short_working_file_test.xml  xtal_design_stability_report.xml  xtal_design_stability_report_no_pssm.xml  xtal_design_troubleshoot.xml  xtal_interface_analysis.xml  xtal_refine.xml  xtal_score.xml
dependencies/sasa/: freesasa-2.0.config
dependencies/sasa/freesasa-2.0/: Makefile.in  config.h
dependencies/sbatch/: bmdca  design_mpi  nanohedra  nanohedra_cpu  predict-structure
dependencies/symmetry_operators/: misc_expand_functions.py  point_group_operators.pkl  point_group_operators.pkl4  point_group_operators_transposed.pkl  space_group_operators.pkl  space_group_operators_transposed.pkl
dependencies/symmetry_operators/POINT_GROUP_SYMM_OPERATORS/: C2.txt  C3.txt  C4.txt  C5.txt  C6.txt  D2.txt  D3.txt  D4.txt  D5.txt  D6.txt  O.txt
(+25079 files in other folders)
