[build-system]
requires = ['setuptools>=61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'SymDesign'
version = '0.4.0'
description = 'Perform symmetric interface design on protein structural models'
readme = 'README.md'
authors = [{name = 'Kyle Meador', email = 'k.meador14@gmail.com'}]
license = [{file = 'LICENSE'}]
classifiers = [
    'License :: OSI Approved ::MIT License',
    'Programming Laguage :: Python',
    'Programming Laguage :: Python :: 3',
]
keywords = ['protein', 'design', 'interface design', 'symmetry', 'interface', 'interface analysis']
dependencies = [
    'pandas',
    'numpy',
    'psutils',
    'scikit-learn',
    'requests',
    'biopython',
    'DNAChisel',
]
requries-python = '>=3.8'

[project.urls]
Homepage = 'https:github.com/kylemeador/symdesign'

[project.scripts]
symdesign = 'symdesign.__main__:main'
